# GPIOTE-GPPI-TIMER

./: .gitignore  CMakeLists.txt  README.md  STRESS_TEST.md  ble.c  ble.h  config.h  main.c  mux.c  mux.h  prj.conf  stress_test.py  stress_test_uart.py
boards/: nrf52833dk_nrf52833.overlay  nrf52840dk_nrf52840.overlay
drivers/UART/: README.md  uart.c  uart.h
drivers/dac/: README.md  dac.c  dac.h  dac_config.h  dac_test.c
drivers/gpiote/: README.md  gpiote.c  gpiote.h  gpiote_config.h
drivers/gppi/: README.md  gppi.c  gppi.h
drivers/mux/: README.md  mux.c  mux.h  mux_config.h
drivers/saadc/: README.md  saadc.c  saadc.h  saadc_config.h
drivers/timers/: README.md  timer.c  timer.h  timer_config.h
services/: README.md  ble.c  ble.h
